--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,4 +1,18 @@
-.list {
-  padding: 0;
-  margin-left: 20px;
+.contactList {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 0;
+}
+
+.text {
+  font-size: 18px;
+  font-weight: bold;
 }
