--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,7 @@
-.ContactForm {
-  margin-left: 20px;
-  margin-bottom: 20px;
+.filter {
+  display: flex;
+  gap: 5px;
+  justify-content: flex-start;
+  color: teal;
+  padding: 20px;
 }
