--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,18 +1,24 @@
-.layout {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 35px;
-  color: darkslateblue;
-}
+/* .layout {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 35px;
+color: darkslateblue;
+} */
 
 .header {
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 40px;
   padding-right: 40px;
-  background-color: darkslateblue;
+  background-color: sandybrown;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.mainBody {
+  background-image: url('../../img/BG.jpg');
+  background-size: cover;
+  height: 100vh;
 }
