--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -7,7 +7,10 @@
   padding-right: 35px;
   gap: 15px;
   border-radius: 10px;
-  border: 1px solid darkslateblue;
+  border: 1px solid sandybrown;
+  background-color: blanchedalmond;
+  width: 500px;
+  margin: auto;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
