--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,31 +2,10 @@
   width: 360px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   padding: 20px;
 }
 
-.inputBlock {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.input {
-  width: 240px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-}
-
-.button {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-right: 20px;
-  padding-left: 20px;
-  background-color: darkslateblue;
-  color: white;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+.title {
+  margin: 0;
+  margin-bottom: 8px;
 }
