--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,18 +1,20 @@
-.contactList {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: center;
-}
-
-ul {
-  list-style: none;
+.form {
+  width: 360px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 20px;
+  padding-top: 0;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
   padding-left: 0;
 }
 
 .text {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 12px;
 }
