--- a/src/components/ContactList/ContactListItem/ContactListItem.module.css
+++ b/src/components/ContactList/ContactListItem/ContactListItem.module.css
@@ -8,33 +8,24 @@
   padding-bottom: 5px;
   padding-right: 10px;
   padding-left: 10px;
-  background-color: gray;
+  background-color: bisque;
   border-radius: 4px;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-}
-
-.button {
-  background-color: transparent;
-  color: white;
-  border: 2px solid white;
-  border-radius: 3px;
 }
 
 .contactInfo {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 7px;
+  gap: 5px;
 }
 
 .name {
-  color: black;
   font-size: 20px;
 }
 
 .number {
   font-weight: bold;
-  color: white;
-  padding-left: 5px;
+  padding-left: 15px;
 }
