--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,7 +1,7 @@
-.filter {
+.form {
+  width: 360px;
   display: flex;
-  gap: 5px;
-  justify-content: flex-start;
-  color: teal;
+  flex-direction: column;
   padding: 20px;
+  padding-top: 0;
 }
