--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,13 +1,4 @@
-/* .layout {
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 35px;
-color: darkslateblue;
-} */
-
 .header {
-  width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 40px;
@@ -18,6 +9,8 @@ color: darkslateblue;
 }
 
 .mainBody {
+  max-width: 1600px;
+  margin: 0 auto;
   background-image: url('../../img/BG.jpg');
   background-size: cover;
   height: 100vh;
