--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -5,7 +5,6 @@
   padding-bottom: 20px;
   padding-left: 35px;
   padding-right: 35px;
-  gap: 15px;
   border-radius: 10px;
   border: 1px solid sandybrown;
   background-color: blanchedalmond;
@@ -15,32 +14,10 @@
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-.label {
+.title {
   display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  font-size: 18px;
-  color: teal;
-}
-
-.input {
-  margin-left: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-}
-
-.button {
-  background-color: teal;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  margin-bottom: 10px;
 }
