--- a/src/shared/Button/Button.module.css
+++ b/src/shared/Button/Button.module.css
@@ -2,7 +2,7 @@
   width: 100px;
   padding: 4px;
   cursor: pointer;
-  margin-bottom: 8px;
-  margin-top: 8px;
+  /* margin-bottom: 8px;
+  margin-top: 8px; */
   margin-left: auto;
 }
