--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 40px;
@@ -11,7 +11,6 @@
 .mainBody {
   max-width: 1600px;
   margin: 0 auto;
-  background-image: url('../../img/BG.jpg');
   background-size: cover;
   height: 100vh;
-}
+} */
