--- a/src/pages/ShopPage/ShopPage.module.css
+++ b/src/pages/ShopPage/ShopPage.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   margin-top: 400px;
   display: flex;
   align-items: center;
@@ -9,4 +9,4 @@
   font-size: 48px;
   font-weight: 800;
   font-family: 'Courier New', Courier, monospace;
-}
+} */
